--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			);
 		</script>
 
-		<meta http-equiv="content-security-policy" content="child-src 'none'; default-src 'none'; frame-src 'self'; worker-src 'self' blob:; connect-src 'self' https://hci.social/; font-src 'self' data: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.zzz.software/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/ https://hci.social/ https://storage.googleapis.com/hci-social-storage/; img-src 'self' data: blob: filesystem: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.zzz.software/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/ https://hci.social/ https://storage.googleapis.com/hci-social-storage/; manifest-src 'self'; media-src 'self' data: blob: mediastream: filesystem: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.zzz.software/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/ https://hci.social/ https://storage.googleapis.com/hci-social-storage/; object-src 'none'; script-src 'self' 'sha256-QOxqn7EUzb3ydF9SALJoJGWSvywW9R0AfTDSenB83Z8=' 'sha256-gLymi7eWeCcF/3af5RPg7eXFqZkUNZRsozjTNQp65S4='; script-src-elem 'self' 'sha256-QOxqn7EUzb3ydF9SALJoJGWSvywW9R0AfTDSenB83Z8=' 'sha256-gLymi7eWeCcF/3af5RPg7eXFqZkUNZRsozjTNQp65S4='; script-src-attr 'none'; style-src 'self' 'unsafe-inline'; style-src-elem 'self' 'unsafe-inline'; style-src-attr 'unsafe-inline'; base-uri 'none'; form-action 'self'; upgrade-insecure-requests">
+		<meta http-equiv="content-security-policy" content="child-src 'none'; default-src 'none'; frame-src 'self'; worker-src 'self' blob:; connect-src 'self' https://hci.social/; font-src 'self' data: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.zzz.software/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/ https://hci.social/ https://storage.googleapis.com/hci-social-storage/; img-src 'self' data: blob: filesystem: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.zzz.software/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/ https://hci.social/ https://storage.googleapis.com/hci-social-storage/; manifest-src 'self'; media-src 'self' data: blob: mediastream: filesystem: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.zzz.software/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/ https://hci.social/ https://storage.googleapis.com/hci-social-storage/; object-src 'none'; script-src 'self' 'sha256-QOxqn7EUzb3ydF9SALJoJGWSvywW9R0AfTDSenB83Z8=' 'sha256-sBwH1Bz0tE9EAdkA2H5DolZ66wF2hrXavj/S//XS9vQ='; script-src-elem 'self' 'sha256-QOxqn7EUzb3ydF9SALJoJGWSvywW9R0AfTDSenB83Z8=' 'sha256-sBwH1Bz0tE9EAdkA2H5DolZ66wF2hrXavj/S//XS9vQ='; script-src-attr 'none'; style-src 'self' 'unsafe-inline'; style-src-elem 'self' 'unsafe-inline'; style-src-attr 'unsafe-inline'; base-uri 'none'; form-action 'self'; upgrade-insecure-requests">
 		<link href="/_app/immutable/assets/Dialog.KD_OhwIF.css" rel="stylesheet">
 		<link href="/_app/immutable/assets/PendingAnimation.CaLz-x25.css" rel="stylesheet">
 		<link href="/_app/immutable/assets/0.DskUKl6g.css" rel="stylesheet">
@@ -23,31 +23,31 @@
 		<link href="/_app/immutable/assets/LibrarySummary.CEnz69zN.css" rel="stylesheet">
 		<link href="/_app/immutable/assets/Code.kJj6jDti.css" rel="stylesheet">
 		<link href="/_app/immutable/assets/3.BeX_znlR.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.CDruAnY9.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/Fr0MGR0-.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BGPCqmkc.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.D1hoDmQ7.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.D5wYjB48.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BlNiLa59.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/Bz9QDf6u.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.5cIx0eFa.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DsnmJJEf.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/Bp51aEpi.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BARjLl3E.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BkYwm30b.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/0.BkQdUoFP.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/CUZNPyEg.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/spYdgRNt.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/CISGt5wM.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/MArUKryd.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/2SmNN44I.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BuszrGeD.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BpEpIGmy.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/DVOHmZ40.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/C6Q82wPf.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/0.8eCDM8a5.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/WALfAtlN.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BJQqDxz4.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/DFlQNTGT.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/CkA_WFL4.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/5UbmO9ZI.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/C7lgd2ss.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BCPIytdx.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/3.DCgcJEPD.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BGA7G3el.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/3Ql-9loP.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/DszkhMYW.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/C6IWCN5H.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/Du4-ZWeX.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/V54QCnR_.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BkuKGToi.js"><!--12qhfyh--><!----><!--17coqft--><!--[!--><!--]--><!----><title>@fuzdev/fuz_mastodon</title>
+		<link rel="modulepreload" href="/_app/immutable/chunks/BnHu1Y6G.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/CTREvFad.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/3.38xfwQY9.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BfCAUB6w.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/CT4BhUjB.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/L_v6z_Yg.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/DWLX5Bbq.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/gTRXFckk.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/Cc4PUTbn.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BsMI9geM.js"><!--12qhfyh--><!----><!--17coqft--><!--[!--><!--]--><!----><title>@fuzdev/fuz_mastodon</title>
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents"><!--[--><!--[--><!----><!--[!--><!--[!--><!----><main class="p_lg svelte-1uha8ag"><section class="box svelte-1uha8ag"><div class="panel p_lg mb_xl5 shadow_md bg"><div class="library_summary svelte-qgtqzb"><header class="box svelte-qgtqzb"><!--[!--><div class="repo_name svelte-qgtqzb">fuz_mastodon</div><!--]-->  <!--[--><!--[!--><!--[--><svg role="img" aria-label="a friendly purple spider facing you" style="width: var(--font_size, var(--icon_size_xl2)); height: var(--font_size, var(--icon_size_xl2));"><image href="https://mastodon.fuz.dev/logo.svg" class="width_100 height_100"></image></svg><!--]--><!--]--><!--]--></header> <!--[!--><!--]--> <!--[--><!--[!--><p class="text_align_center">Mastodon components and helpers for Svelte, SvelteKit, and Fuz <!--[-->🦣<!--]--></p><!--]--><!--]--> <!----> <!--[--><!--[!--><div class="homepage_url svelte-qgtqzb"><a class="chip svelte-qgtqzb" href="https://mastodon.fuz.dev/">mastodon.fuz.dev</a></div><!--]--><!--]--> <div class="links svelte-qgtqzb"><!--[--><a class="chip svelte-qgtqzb" href="https://github.com/fuzdev/fuz_mastodon">repo</a><!--]--> <!--[--><a class="chip svelte-qgtqzb" title="version" href="https://github.com/fuzdev/fuz_mastodon/blob/main/CHANGELOG.md">0.37.0</a><!--]--> <!--[--><a class="chip svelte-qgtqzb" href="https://www.npmjs.com/package/@fuzdev/fuz_mastodon">npm</a><!--]--></div> <!--[--><!--[!--><blockquote class="npm_url svelte-qgtqzb">npm i -D @fuzdev/fuz_mastodon</blockquote><!--]--><!--]--></div><!----></div> <!----><a href="/docs" class="card  svelte-1gkpzoa link left"><!--[--><div class="icon svelte-1gkpzoa"><!--[!--><!---->🦣<!----><!--]--></div><!--]--> <div class="content svelte-1gkpzoa"><!---->docs<!----></div> <!--[!--><!--]--><!----></a><!----><!----></section> <section class="width_upto_md svelte-1uha8ag"><div class="mb_lg width_100"><div class="width_100 mb_lg"><code data-lang="ts" class="svelte-jqsy8a"><!--[!--><!--[!--><!----><span class="token_special_keyword">import</span> <span class="token_capitalized_identifier token_class_name">Toot</span> <span class="token_special_keyword">from</span> <span class="token_string">'@fuzdev/fuz_mastodon/Toot.svelte'</span><span class="token_punctuation">;</span><!----><!--]--><!--]--></code><!----></div> <div class="width_100"><code data-lang="svelte" class="svelte-jqsy8a"><!--[!--><!--[!--><!----><span class="token_tag"><span class="token_tag"><span class="token_punctuation token_tag_punctuation">&lt;</span>Toot</span>
@@ -118,15 +118,15 @@
 			
 			<script>
 				{
-					__sveltekit_1dbnrx7 = {
+					__sveltekit_334g6q = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.CDruAnY9.js"),
-						import("/_app/immutable/entry/app.D1hoDmQ7.js")
+						import("/_app/immutable/entry/start.D5wYjB48.js"),
+						import("/_app/immutable/entry/app.5cIx0eFa.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
